--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class = "container">
+	<h1>My Playlist</h1>
+	<div class = "playlist">
+		<ul>
+			<li>Song1</li>
+			<li>Song1</li>
+			<li>Song1</li>
+			<li>Song1</li>
+			<li>Song1</li>
+		</ul>
+	</div>
+		<h2>Now Playing....</h2>
+		<div class = "car">
+			<video controls  height="500px" width="500px" class = "player_one">
+				<source src = "https://www.w3schools.com/tags/movie.mp4" type = "video/mp4">
+			</video>
+			<h2>MP3 Songs</h2>
+			<p>New york City</p>
+			<audio class = "player_two" src = "https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
