--- a/main.html
+++ b/main.html
@@ -12,21 +12,21 @@
 	<h1>My Playlist</h1>
 	<div class = "playlist">
 		<ul>
-			<li>Song1</li>
-			<li>Song1</li>
-			<li>Song1</li>
-			<li>Song1</li>
-			<li>Song1</li>
+			<a href = "https://en.wikipedia.org/wiki/Song" target="_blank"><li>Song1</li></a>
+			<a href = "https://en.wikipedia.org/wiki/Song" target="_blank"><li>Song1</li></a>
+			<a href = "https://en.wikipedia.org/wiki/Song" target="_blank"><li>Song1</li></a>
+			<a href = "https://en.wikipedia.org/wiki/Song" target="_blank"><li>Song1</li></a>
+			<a href = "https://en.wikipedia.org/wiki/Song" target="_blank"><li>Song1</li></a>
 		</ul>
 	</div>
-		<h2>Now Playing....</h2>
+		<h2>Now Playing...</h2>
 		<div class = "car">
-			<video controls  height="500px" width="500px" class = "player_one">
+		<center>	<video controls  height="500px" width="500px" class = "player_one">
 				<source src = "https://www.w3schools.com/tags/movie.mp4" type = "video/mp4">
-			</video>
-			<h2>MP3 Songs</h2>
-			<p>New york City</p>
-			<audio class = "player_two" src = "https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+			</video></center>
+			<h2>MP3 songs</h2>
+			<p><b>Maan Meri Jaan</b></p>
+			<center><audio class = "player_two" src = "https://www.pagalworld.com.se/files/download/id/64630" controls></audio></center>
 		</div>
 	</div>
 	
